<!--
  ~ Copyright 2020 Acoustic, L.P.
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~  Apache License, Version 2.0
  ~  www.apache.org
  ~  Home page of The Apache Software Foundation
  ~
  ~  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and limitations under the License.
  -->

<resources>
    <string name="app_name">AcousticContentHubSample</string>
    <string name="title_home">Home</string>
    <string name="title_about">About</string>
    <string name="title_destinations">Destinations</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_search">Search</string>
    <string name="title_close">Close</string>

    <string name="title_articles">Articles</string>
    <string name="title_article_details">Article Details</string>
    <string name="title_image_details">Image Details</string>

    <string name="home_author_text">By %1$s</string>
    <string name="search_hint">Search for articles</string>
    <string name="no_data_text">No results</string>
</resources>
