<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Acoustic, L.P.
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~  Apache License, Version 2.0
  ~  www.apache.org
  ~  Home page of The Apache Software Foundation
  ~
  ~  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_destinations"
        android:icon="@drawable/ic_collections_black_24dp"
        android:title="@string/title_destinations" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_gallery" />

</menu>
